examples/test/testpolicy1581.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1581
  namespace: namespace393
spec:
  podSelector:
    matchLabels:
      key26: value47
      key33: value45
      key25: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value32
      podSelector:
        matchLabels:
          key34: value1
          key48: value4
